# timeblock-organizer

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  MVP-GAP-ANALYSIS.md  README.md  SESSAO-REFACTORING-BUSINESS-RULES.md  mkdocs.yml  requirements.txt
cli/: .gitignore  .ruff.toml  migrate_remove_redundant_fields.py  migrate_task_fields.py  pyproject.toml  requirements.txt
cli/src/timeblock/: config.py  database.py  main.py
cli/src/timeblock/commands/: add.py  habit.py  init.py  instance.py  list.py  report.py  reschedule.py  routine.py  schedule.py  tag.py  task.py  timer.py
cli/src/timeblock/database/: __init__.py  engine.py  migrations.py
cli/src/timeblock/models/: __init__.py  enums.py  event.py  habit.py  habit_instance.py  routine.py  tag.py  task.py  time_log.py
cli/src/timeblock/services/: __init__.py  event_reordering_models.py  event_reordering_service.py  habit_instance_service.py  habit_service.py  routine_service.py  tag_service.py  task_service.py  timer_service.py
cli/src/timeblock/utils/: conflict_display.py  date_helpers.py  date_parser.py  event_date_filters.py  event_list_presenter.py  formatters.py  logger.py  proposal_display.py  queries.py  validators.py
cli/tests/: conftest.py
cli/tests/bdd/: README.md
cli/tests/bdd/features/: habit_creation.feature  habit_skip.feature  habit_skip_cli.feature
cli/tests/bdd/step_defs/: test_habit_skip_cli_steps.py  test_habit_skip_steps.py
cli/tests/e2e/: test_event_creation.py  test_habit_lifecycle.py
cli/tests/factories/: __init__.py  factories.py
cli/tests/integration/: conftest.py  test_fixtures_validation.py  test_init_command.py  test_list_command.py  test_logging_integration.py  test_migrations.py
cli/tests/integration/add/: test_add_edge_cases.py  test_add_errors.py  test_add_success.py
cli/tests/integration/commands/: conftest.py  test_add_edge_cases.py  test_add_errors.py  test_add_success.py  test_cli_fixtures.py  test_habit_commands.py  test_init.py  test_list.py  test_list_filters.py  test_main.py  test_task_commands.py
cli/tests/unit/: conftest.py  test_date_helpers.py  test_formatters.py  test_list_helpers.py  test_queries_build.py  test_queries_fixtures.py  test_validators_color.py  test_validators_edge_cases.py  test_validators_range.py  test_validators_time.py
docs/: README.md
(+300 files in other folders)
